--- a/index.html
+++ b/index.html
@@ -101,7 +101,17 @@ img {
             <p><center><b>Name</center></b></p>
             </div>
         </td>
-    </tr>
+        <--!Hanumanth changes-->
+        <td> 
+            <div class="column" style="opacity: 1;">
+            <a href="http://bit.ly/2stVHon/" target="_blank">
+           <center><img src="https://s.gravatar.com/avatar/92f7bdaba2789d4be2c559ab8a548b37?s=600" alt="Photo" height="40%" width="40%" ></center>
+            </a>
+            <p><center><b>Name</center></b></p>
+            </div>
+        </td>
+
+        </tr>
     </table>
 
 </div>
