--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@ img {
             <!--Bhuvji-->
             <div class="column">
             <a href="http://bit.ly/2G2XBxP" target="_blank">
-            <center><img src="https://s.gravatar.com/avatar/fe9f59d1c543700ddef1684cc67c8167?s=80" alt="Photo" height="100%" width="100%" ></center>
+            <center><img src="https://s.gravatar.com/avatar/fe9f59d1c543700ddef1684cc67c8167?s=80" alt="Photo" height="80%" width="80%" ></center>
             </a>
-            <p><center><b>Name</center></b></p>
+            <p><center><b>Bhuvnesh</center></b></p>
             </div>
         </td>
         <td> 
             <div class="column" style="opacity: 1;">
             <a href="http://resumeyr1-resume-yr.a3c1.starter-us-west-1.openshiftapps.com/" target="_blank">
-            <center><img src="https://s.gravatar.com/avatar/0c8bf3733df759cde514a76a36dfc211?s=600" alt="Photo" height="40%" width="40%" ></center>
+            <center><img src="https://s.gravatar.com/avatar/0c8bf3733df759cde514a76a36dfc211?s=600" alt="Photo" height="80%" width="80%" ></center>
             </a>
-            <p><center><b>Name</center></b></p>
+            <p><center><b>Yogesh</center></b></p>
             </div>
         </td>
         <td> 
@@ -107,7 +107,7 @@ img {
             <a href="http://bit.ly/2stVHon/" target="_blank">
            <center><img src="https://s.gravatar.com/avatar/92f7bdaba2789d4be2c559ab8a548b37?s=600" alt="Photo" height="40%" width="40%" ></center>
             </a>
-            <p><center><b>Name</center></b></p>
+            <p><center><b>Hanumanth</center></b></p>
             </div>
         </td>
 
