--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ img {
         <td> 
             <!--Bhuvji-->
             <div class="column">
-            <a href="http://bit.ly/2G2XBxP" target="_blank">
-            <center><img src="https://s.gravatar.com/avatar/4f6363258f407f99485df58e1766edaa=80" alt="Photo" height="100%" width="100%" ></center>
+            <a href="http://bit.ly/2Bv5c9p" target="_blank">
+            <center><img src="https://s.gravatar.com/avatar/fe9f59d1c543700ddef1684cc67c8167" alt="Photo" height="100%" width="100%" ></center>
             </a>
-            <p><center><b>Kunal Bharthiae</center></b></p>
+            <p><center><b>Bhuvnesh Sharma</center></b></p>
             </div>
         </td>
         <td> 
