--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ img {
         </td>
         <td> 
             <div class="column" style="opacity: 1;">
-            <a href="http://54.175.192.244/" target="_blank">
-           <center><img src="https://s.gravatar.com/avatar/34b3c07ba70c3daf6a3f6f9fb23c8e20?s=600" alt="Photo" height="40%" width="40%" ></center>
+            <a href="http://bit.ly/2EsTajv" target="_blank">
+           <center><img src="https://s.gravatar.com/avatar/76f8b530c2bff246b5d80c95359f6069?s=600" alt="Photo" height="40%" width="40%" ></center>
             </a>
-            <p><center><b>Name</center></b></p>
+            <p><center><b>Pannaga Simha</center></b></p>
             </div>
         </td>
     </tr>
